--- a/issue1.tex
+++ b/issue1.tex
@@ -9,7 +9,12 @@
 \usetikzlibrary{calc,intersections,through,backgrounds}
 \begin{document}
 
-\section*{Gruppenstruktur eines Kreises}
+\section*{Mathematik für Gelangweilte}
+Es sind Ferien. Zeit für ein paar Knobelaufgaben!
+
+\noindent -- Markus Fenske
+
+\section*{Aufgabe 1: Gruppenstruktur eines Kreises}
 \begin{wrapfigure}{r}{0pt}
   \begin{tikzpicture}
     \pgfmathsetmacro{\radius}{2.2}
